# trivial

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  clang-format-all.sh  main.cpp
testing/: CMakeLists.txt  ctordtormock.h  main.cpp  singletonmock.h  tst_array.h  tst_array_copy.h  tst_optional.h  tst_shared_pointer.h  tst_unique_pointer.h  tst_weak_pointer.h
trivial/: array.h  array_copy.h  optional.h  shared_ptr.h  unique_ptr.h  weak_ptr.h
